<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Scanner Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Scanner Control</string>
    <string name="home_list_content_desc">Right Chevron</string>
    <string-array name="home_items">
        <item>Devices</item>
        <item>Connection Help</item>
        <item>Application Settings</item>
        <item>About</item>

    </string-array>
    <string-array name="scanner_configs">
        <item>Set Factory Defaults</item>
        <item>Battery Off</item>
        <item>Cradle Host</item>
        <item>SPP Client</item>
        <item>SPP Server</item>
        <item>HID Server</item>
        <item>Low Beeper Volume</item>
        <item>Medium Beeper Volume</item>
        <item>High Beeper Volume</item>
    </string-array>
    <string-array name="beeper_actions">
        <item>One high short beep</item>
        <item>Two high short beeps</item>
        <item>Three high short beeps</item>
        <item>Four high short beeps</item>
        <item>Five high short beeps</item>
        <item>One low short beep</item>
        <item>Two low short beeps</item>
        <item>Three low short beeps</item>
        <item>Four low short beeps</item>
        <item>Five low short beeps</item>
        <item>One high long beep</item>
        <item>Two high long beeps</item>
        <item>Three high long beeps</item>
        <item>Four high long beeps</item>
        <item>Five high long beeps</item>
        <item>One low long beep</item>
        <item>Two low long beeps</item>
        <item>Three low long beeps</item>
        <item>Four low long beeps</item>
        <item>Five low long beeps</item>
        <item>Fast warble beep</item>
        <item>Slow warble beep</item>
        <item>High-low beep</item>
        <item>Low-high beep</item>
        <item>High-low-high beep</item>
        <item>Low-high-low beep</item>
        <item>High-high-low-low beep</item>
    </string-array>
    <string-array name="vibration_durations">
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>750</item>
    </string-array>
    <string name="menu_item_device_disconnect">Disconnect Scanner</string>
    <string name="version">Version</string>
    <string name="version_info">Zebra Scanner Control Application v1.0\n\n©2020 Zebra Technologies Corp. and/or its affiliates.  All rights reserved.\n</string>
    <string name="title_activity_scanners">Available Device List</string>
    <string name="bt_scanners_not_found">BT scanners not found</string>
    <string name="bt_no_scanners">No scanner found.</string>
    <string name="menu_firmware_help">Firmware update help</string>
    <string name="menu_add_scanner">Refresh device list</string>
    <string name="menu_get_pairing_barcode">Get Pairing Barcode</string>
    <string name="menu_refresh_scanners">Refresh</string>
    <string name="title_activity_settings">App Settings</string>
    <string name="scanner_detection_title">Scanner Detection</string>
    <string name="scanner_discovery_title">Bluetooth Scanner Discovery</string>
    <string name="auto_detection">Auto Detection</string>
    <string name="discover_bluetooth_scanners">Discover Bluetooth Scanners</string>
    <string name="pairing_barcode_title">Pair New Scanner (STC) Barcode</string>
    <string name="pairing_barcode_type">Barcode Type</string>
    <string name="pairing_barcode_configuration">Set Factory Defaults</string>
    <string name="reset_app_defaults">Reset App Defaults</string>
    <string name="btn_reset_factory_defaults">Reset Defaults</string>
    <string name="events_title">Background Notifications</string>
    <string name="available_scanner">Available Scanner</string>
    <string name="active_scanner">Active Scanner</string>
    <string name="assertinfo">Asset Information</string>
    <string name="barcode_event">Barcode Event</string>
    <string name="image_event">Image Event</string>
    <string name="video_event">Video Event</string>
    <string name="background_mode_title">BACKGROUND MODE</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="notifications_title">NOTIFICATIONS</string>
    <string name="title_activity_battery_off">Battery Off</string>
    <string name="battery_off_content_desc">Barcode to be scanned</string>
    <string name="battery_off_text">Scan the presented barcode to configure [battery off] mode</string>
    <string name="no_items">No Items</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="paired_devices_title">Selected Scanners</string>
    <string name="available_readers_title">Available Readers</string>
    <string name="none_paired">No Devices Paired</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="title_activity_zxing_barcode">ZxingBarcodeActivity</string>
    <string name="title_activity_active_scanner">Active Scanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Disconnect">Disconnect</string>
    <string name="info_title">INFORMATION</string>
    <string name="title_activity_beeper_actions">Beeper Settings</string>
    <string name="title_activity_led">LED Control</string>
    <string name="title_activity_assert">Active Scanner</string>
    <string name="title_activity_symbologies">Symbology Settings (ON/OFF)</string>
    <string name="title_activity_beeper_settings">Beeper Settings</string>
    <string name="title_activity_splash_screen">Splash</string>
    <string name="title_activity_available_scanner">Available Scanner</string>
    <string name="title_activity_barcode_details">Barcode Details</string>
    <string name="title_activity_navigate_scan_speed_analytics">Scan Speed Analytics(SSA)</string>
    <string name="title_activity_slowest_decode_image_settings">Slowest Decode Image Settings</string>
    <string name="title_activity_scan_speed_analytics">Scan Speed Analytics</string>
    <string name="title_activity_ssa_barcode_type">Barcode Type For SSA</string>
    <string name="connect_title">Connect</string>
    <string name="information">INFORMATION</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="scanner_id">Scanner ID: </string>
    <string name="barcode_type">Barcode Type : </string>
    <string name="barcode_data">Barcode Data:</string>
    <string name="beeper_volume">Beeper Volume</string>
    <string name="threshold_value">Only Save Image Slower Than : </string>
    <string name="low">Low</string>
    <string name="save_image">Save Image</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="beeper_frequency">BEEPER FREQUENCY</string>
    <string name="green_led_control">Green LED</string>
    <string name="green_led_on">Green LED ON</string>
    <string name="green_led_off">Green LED OFF</string>
    <string name="amber_led_control">Amber/Blue LED</string>
    <string name="amber_led_on">Amber/Blue LED ON</string>
    <string name="amber_led_off">Amber/Blue LED OFF</string>
    <string name="red_led_control">Red LED</string>
    <string name="red_led_on">Red LED ON</string>
    <string name="red_led_off">Red LED OFF</string>
    <string name="splash_content_desc">Splash Screen</string>
    <string name="upc_a">UPC-A</string>
    <string name="upc_e">UPC-E</string>
    <string name="upc_e1">UPC-E1</string>
    <string name="ean_8">EAN-8/JAN8</string>
    <string name="ean">EANJAN</string>
    <string name="ean_13">EAN-13/JAN13</string>
    <string name="bookland">Bookland EAN</string>
    <string name="code128">Code 128</string>
    <string name="composite">Composite</string>
    <string name="ucc">UCC/EAN-128</string>
    <string name="code39">Code 39</string>
    <string name="code93">Code 93</string>
    <string name="code11">Code 11</string>
    <string name="actions">ACTIONS</string>
    <string name="pull_trigger">Pull Trigger</string>
    <string name="release_trigger">Release Trigger</string>
    <string name="barcode_list">BARCODE LIST</string>
    <string name="no_barcode">No barcode received</string>
    <string name="connection">CONNECTION</string>
    <string name="auto_reconnection">Reconnect to Scanner</string>
    <string name="beeper">Beeper</string>
    <string name="scanning_control">Scanning</string>
    <string name="content_desc">Indicating Navigation</string>
    <string name="led">LED</string>
    <string name="nav_desc">Indicating Navigation</string>
    <string name="symbologies">Symbologies</string>
    <string name="enable_scanning">Enable scanning</string>
    <string name="disable_scanning">Disable scanning</string>
    <string name="persist_settings">   Persist Settings</string>
    <string name="iso_file">   Received data in ISO format</string>
    <string name="model">Model Number:</string>
    <string name="serial">Serial Number:</string>
    <string name="firmware">Firmware:</string>
    <string name="config">Configuration Filename:</string>
    <string name="dateofmanufactured">Manufacture Date:</string>
    <string name="aimon">AIM On</string>
    <string name="aimoff">AIM Off</string>
    <string name="vibration_feedback">Vibration Feedback</string>
    <string name="title_activity_barcode_configuration">Connection Help</string>
    <string name="slowest_decode_image">Slowest Decode Image:</string>
    <string name="weight_measured">Weight Measured :</string>
    <string name="weight_Unit">Weight Unit :</string>
    <string name="weight_Status">Weight Status :</string>
    <string name="live_Weight">Live Weight :</string>
    <string name="top_hint">ScanToConnect</string>
    <string name="bt_logo">BT Logo</string>
    <string name="info_top">Scan the bar code below to pair your cordless scanner to this tablet/phone</string>
    <string name="info_bottom">This on-screen bar code replaces the need for a paper pairing bar code.</string>
    <string name="clearList">CLEAR LIST</string>
    <string name="title_activity_scanner_list">ScannerListActivity</string>
    <string name="title_activity_connection_help">Connection Help</string>
    <string name="GS1128">GS1-128</string>
    <string name="GS1Datamatrix">GS1-Datamatrix</string>
    <string name="GS1QRCode">GS1-QR Code</string>
    <string name="operationmode_dialog_title">Select Operation Mode</string>
    <string name="ok">OK</string>
    <string name="cancel_upper">CANCEL</string>
    <string name="cancel">Cancel</string>
    <string name="error_occurred">Error Occurred !</string>
    <string name="error_occurred_no_permission">Error occurred ! permission denied </string>
    <string name="disconnect_current_scanner">This will disconnect your current scanner</string>
    <string name="image_saved">Image Successfully Saved into Download/Scanner Directory</string>
    <string name="continue_txt">Continue</string>
    <string name="instruction_snapi">Attach your cabled scanner to your device and scan the barcode to connect with this app.</string>
    <string name="instruction">Scan barcode to pair your cordless scanner to this app.</string>
    <string name="pick_list_mode">Picklist Mode</string>
    <string name="stop_bluetooth_scanner_discovery">Stop Bluetooth Scanner Discovery</string>
    <string name="scanning">Scanning Control</string>
    <string name="title_activity_connection_help_cs4070">ConnectionHelpCS4070</string>
    <string name="trigger">Trigger</string>
    <string name="aim_guide">Aim Guide</string>
</resources>